--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "FirstReactApp",
+  "name": "todoappredux",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
+  "scripts": {
+    "webpack": "webpack",
+    "start": "webpack-dev-server --content-base build/"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "html-webpack-plugin": "^2.28.0",
+    "mongoose": "^4.10.6",
+    "node-loader": "^0.6.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
     "webpack": "^2.6.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.5.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack",
-    "dev": "webpack-dev-server --content-base build/" 
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maggiechu26/FirstReactApp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maggiechu26/FirstReactApp/issues"
-  },
-  "homepage": "https://github.com/maggiechu26/FirstReactApp#readme"
+    "webpack-dev-server": "^2.4.5"
+  }
 }
